# rusty-boy

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  opcode_game.py  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: main.yml
cartridge/: Cargo.toml
cartridge/src/: header.rs  lib.rs  mappers.rs
cartridge/src/mappers/: mbc1.rs  mbc3.rs  mbc5.rs  rom_only.rs
docs/: talk_outline.md
ppu/: Cargo.toml
ppu/benches/: ppu_line_drawing.rs
ppu/src/: dma.rs  lib.rs  modes.rs  oam.rs  regs.rs  vram.rs
rb-disasm/: Cargo.toml
rb-disasm/src/: main.rs
roms/hello-world/: Makefile  main.asm
roms/test1/: main.asm
rusty-boy/: Cargo.toml
rusty-boy-sdl/: Cargo.toml
rusty-boy-sdl/src/: main.rs
rusty-boy-wasm/: Cargo.toml  index.html  index.scss
rusty-boy-wasm/src/: app.rs  error.rs  game.rs  header.rs  icon.rs  joypad.rs  loader.rs  main.rs  modal.rs  theme.rs
rusty-boy/src/: disassembler.rs  file_rom.rs  joypad.rs  lib.rs  main.rs  memory.rs  rom.rs  rusty_boy.rs
rusty-date/: Cargo.toml  Crank.toml  ldscript.ld  pdxinfo  rust-toolchain.toml
rusty-date/.cargo/: config.toml
rusty-date/src/: game_runner.rs  game_selector.rs  lib.rs  main.rs
sm83/: Cargo.toml  build.rs
sm83/benches/: cpu_instr.rs
sm83/src/: core.rs  decoder.rs  interrupts.rs  lib.rs  memory.rs
sm83/tests/: generated_tests.rs
sm83/tests/data/: adc_a_a.toml  adc_a_b.toml  adc_a_c.toml  adc_a_d.toml  adc_a_e.toml  adc_a_h.toml  adc_a_ind_hl.toml  adc_a_l.toml  adc_a_n8.toml  add_a_a.toml  add_a_b.toml  add_a_c.toml  add_a_d.toml  add_a_e.toml  add_a_h.toml  add_a_ind_hl.toml  add_a_l.toml  add_a_n8.toml  add_hl_bc.toml  add_hl_de.toml  add_hl_hl.toml  add_hl_sp.toml  add_sp_e8.toml  and_a_a.toml  and_a_b.toml  and_a_c.toml  and_a_d.toml  and_a_e.toml  and_a_h.toml  and_a_ind_hl.toml  and_a_l.toml  and_a_n8.toml  bit_0_a.toml  bit_0_b.toml  bit_0_c.toml  bit_0_d.toml  bit_0_e.toml  bit_0_h.toml  bit_0_ind_hl.toml  bit_0_l.toml  (+461 more)
sm83_decoder_macros/: Cargo.toml
sm83_decoder_macros/src/: lib.rs
sm83_decoder_macros/tests/: entry.rs
timer/: Cargo.toml
timer/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: disk.rs  main.rs  playdate.rs  stack.rs
xtask/src/disk/: linux.rs  macos.rs
