[workspace]
resolver = "2"

members = [
    "cartridge",
    "ppu",
    "rb-disasm",
    "rusty-boy",
    "rusty-boy-sdl",
    "rusty-boy-wasm",
    "sm83",
    "sm83_decoder_macros",
    "timer",
    "xtask",
]

exclude = ["rusty-date"]

[workspace.dependencies]
cartridge = { path = "cartridge", version = "0.1.0" }
ppu = { path = "ppu", version = "0.1.0" }
rusty-boy = { path = "rusty-boy", version = "0.1.0" }
sm83 = { path = "sm83", version = "0.1.0" }
sm83_decoder_macros = { path = "sm83_decoder_macros", version = "0.1.0" }
timer = { path = "timer", version = "0.1.0" }

anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.7"
heapless = "0.8"
log = "0.4"
nix = { version = "0.28", features = ["sched"] }
png = "0.17"
sdl2 = "0.36"
serde = { version = "1.0.201", features = ["derive"] }
static_assertions = "1.1.0"
tock-registers = "0.9.0"
toml = "0.8.12"
xshell = "0.2.7"
termcolor = "1.4.1"

[profile.release]
debug = true
