[package]
name = "ppu"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sm83 = { path =  "../sm83", version = "0.1.0" }
tock-registers = "0.9.0"
static_assertions = "1.1.0"
log = "0.4"
heapless = "0.8"
