[package]
name = "ppu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Game Boy PPU emulation"
homepage = "https://github.com/Javier-varez/rusty-boy"
repository = "https://github.com/Javier-varez/rusty-boy"
categories = ["embedded", "gaming"]
keywords = ["embedded", "gameboy", "playdate"]
readme = "../README.md"

[dependencies]
sm83 = { path =  "../sm83", version = "0.1.0" }
tock-registers = "0.9.0"
static_assertions = "1.1.0"
log = "0.4"
heapless = "0.8"
