[package]
name = "ppu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Game Boy PPU emulation"
homepage = "https://github.com/Javier-varez/rusty-boy"
repository = "https://github.com/Javier-varez/rusty-boy"
categories = ["embedded", "gaming"]
keywords = ["embedded", "gameboy", "playdate"]
readme = "../README.md"

[[bench]]
name = "ppu_line_drawing"
harness = false

[features]
profile = []

[dependencies]
sm83.workspace = true
tock-registers.workspace = true
static_assertions.workspace = true
log.workspace = true
heapless.workspace = true

[dev-dependencies]
criterion.workspace = true
