[package]
name = "rb-disasm"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-boy = { path = "../rusty-boy" }
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
