[package]
name = "rb-disasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Game Boy Disassembler"
homepage = "https://github.com/Javier-varez/rusty-boy"
repository = "https://github.com/Javier-varez/rusty-boy"
categories = ["embedded", "gaming"]
keywords = ["embedded", "gameboy", "playdate"]
readme = "../README.md"

[dependencies]
rusty-boy = { path = "../rusty-boy" }
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
