[package]
name = "rusty-boy-sdl"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cartridge = { path = "../cartridge" }
ppu = { path = "../ppu" }
rusty-boy = { path = "../rusty-boy" }
anyhow = "1.0"
png = "0.17"
sdl2 = "0.36"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4"
