[package]
name = "rusty-boy-sdl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Game Boy Emulator for desktop computers that uses SDL2 for graphics and events"
homepage = "https://github.com/Javier-varez/rusty-boy"
repository = "https://github.com/Javier-varez/rusty-boy"
categories = ["embedded", "gaming"]
keywords = ["embedded", "gameboy", "playdate"]
readme = "../README.md"

[features]
approximate = []

[dependencies]
cartridge = { path = "../cartridge" }
ppu = { path = "../ppu" }
sm83 = { path = "../sm83" }
rusty-boy = { path = "../rusty-boy" }
anyhow = "1.0"
png = "0.17"
sdl2 = "0.36"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4"
