[package]
name = "rusty-boy-sdl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Game Boy Emulator for desktop computers that uses SDL2 for graphics and events"
homepage = "https://github.com/Javier-varez/rusty-boy"
repository = "https://github.com/Javier-varez/rusty-boy"
categories = ["embedded", "gaming"]
keywords = ["embedded", "gameboy", "playdate"]
readme = "../README.md"

[features]
approximate = []
profile = ["nix"]

[dependencies]
cartridge.workspace = true
ppu.workspace = true
sm83.workspace = true
rusty-boy.workspace = true
anyhow.workspace = true
png.workspace = true
sdl2.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
nix = { workspace = true, optional = true }
