[package]
name = "rusty-boy"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sm83 = { path =  "../sm83", version = "0.1.0" }
ppu = { path =  "../ppu", version = "0.1.0" }
cartridge = { path =  "../cartridge", version = "0.1.0" }
timer = { path =  "../timer", version = "0.1.0" }
log = "0.4.21"
