[package]
name = "rusty-boy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Game Boy emulator"
homepage = "https://github.com/Javier-varez/rusty-boy"
repository = "https://github.com/Javier-varez/rusty-boy"
categories = ["embedded", "gaming"]
keywords = ["embedded", "gameboy", "playdate"]
readme = "../README.md"

[dependencies]
sm83.workspace = true
ppu.workspace = true
cartridge.workspace = true
timer.workspace = true
log.workspace = true
