[package]
name = "rusty-date"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Game Boy emulator for Playdate"
homepage = "https://github.com/Javier-varez/rusty-boy"
repository = "https://github.com/Javier-varez/rusty-boy"
categories = ["embedded", "gaming"]
keywords = ["embedded", "gameboy", "playdate"]
readme = "../README.md"

[package.metadata.cargo-xbuild]
memcpy = false
sysroot_path = "target/sysroot"
panic_immediate_abort = false

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.dev]
debug = 1
codegen-units = 1
panic = "abort"
opt-level = 3
lto = "fat"

[profile.release]
debug = 1
codegen-units = 1
panic = "abort"
opt-level = 3
lto = "fat"

[dependencies]
crankstart = { git = "https://github.com/javier-varez/crankstart" }
crankstart-sys = { git = "https://github.com/javier-varez/crankstart" }
anyhow = { version = "1.0.31", default-features = false }
euclid = { version = "0.22.9", default-features = false, features = [ "libm" ] }
rusty-boy = { path = "../rusty-boy" }
cartridge = { path = "../cartridge" }
ppu = { path = "../ppu" }
sm83 = { path = "../sm83" }
