[package]
name = "sm83"
version = "0.1.0"
edition = "2021"
description = "An sm83 core emulator for GameBoy"
license = "MIT AND Apache-2.0"

[dependencies]
sm83_decoder_macros = { path = "../sm83_decoder_macros" }

[dev-dependencies]
serde = { version = "1.0.201", features = ["derive"] }
toml = "0.8.12"
