[package]
name = "sm83"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "SM83 CPU emulator, for Game Boy emulators"
homepage = "https://github.com/Javier-varez/rusty-boy"
repository = "https://github.com/Javier-varez/rusty-boy"
categories = ["embedded", "gaming"]
keywords = ["embedded", "gameboy", "playdate"]
readme = "../README.md"

[features]
profile = []

[dependencies]
sm83_decoder_macros = { path = "../sm83_decoder_macros" }

[dev-dependencies]
serde = { version = "1.0.201", features = ["derive"] }
toml = "0.8.12"
