[package]
name = "sm83"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "SM83 CPU emulator, for Game Boy emulators"
homepage = "https://github.com/Javier-varez/rusty-boy"
repository = "https://github.com/Javier-varez/rusty-boy"
categories = ["embedded", "gaming"]
keywords = ["embedded", "gameboy", "playdate"]
readme = "../README.md"

[lib]
bench = false

[[bench]]
name = "cpu_instr"
harness = false

[features]
profile = []

[dependencies]
sm83_decoder_macros.workspace = true

[dev-dependencies]
serde.workspace = true
toml.workspace = true
criterion.workspace = true
rand = "0.9"
