[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap.workspace = true
xshell.workspace = true
termcolor.workspace = true
anyhow.workspace = true
goblin = "0.9.3"
rustc-demangle = "0.1.24"
serialport = "4.7.0"
plist = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
